--- a/css/style.css
+++ b/css/style.css
@@ -7,20 +7,19 @@ body {
     background-color: #fff
 }
 
-.logo{
+.logo {
     margin-bottom: 2em;
     width: 300px;
     height: 300px;
 }
 
-.btn{
-  text-transform: uppercase;
+.btn {
+    text-transform: uppercase;
 }
 
- .btn-link{
-  color: #33C3F0;
+.btn-link {
+    color: #33C3F0;
 }
-
 
 .navbar-default {
     background-color: #ddd;
@@ -31,22 +30,20 @@ body {
     width: 334px;
 }
 
-
-
-.status{
-top: 0;
-position: relative;
-width: 100%;
+.status {
+    top: 0;
+    position: relative;
+    width: 100%;
 }
 
-
-.hidden{
+.hidden {
     display: none;
 }
 
-.container{
+.container {
     z-index: 50000;
 }
+
 
 /*.menu{
 background-color: #fff;
@@ -59,6 +56,7 @@ z-index: 5000;
 }
 */
 
+
 /*.navbar-center
 {
     position: absolute;
@@ -66,30 +64,33 @@ z-index: 5000;
     text-align: center;
 }*/
 
+
 /*.nav>li>a {
     display: inline-block;
 }*/
 
-.fa-trash-o{
+.fa-trash-o {
     color: #f00;
     cursor: pointer;
     margin-left: 10px;
 }
 
- #trash{
-    visibility: hidden;}
-li:hover #trash{
-visibility: visible;}
+#trash {
+    visibility: hidden;
+}
+
+li:hover #trash {
+    visibility: visible;
+}
 
 .sidebar li {
     cursor: pointer;
 }
 
-i.fa-caret-square-o-right{
-   font-size: 3em;
-   color: #888;
+i.fa-caret-square-o-right {
+    font-size: 3em;
+    color: #888;
 }
-
 
 .wrapper {
     width: 3925px;
@@ -101,15 +102,13 @@ i.fa-caret-square-o-right{
     z-index: 0;
 }
 
-.collapsed{
-      width: 75px;
+.collapsed {
+    width: 75px;
 }
 
-.offset{
-  left: 360px;
+.offset {
+    left: 360px;
 }
-
-
 
 .frame {
     float: left;
@@ -117,9 +116,10 @@ i.fa-caret-square-o-right{
     top: 100px;
 }
 
-form{
-	   margin-bottom: 0;
+form {
+    margin-bottom: 0;
 }
+
 .form {
     padding: 10px 0;
     position: fixed;
@@ -130,11 +130,172 @@ form{
 }
 
 h2 {
-	font-size: 1.5em;
+    font-size: 1.5em;
     margin: 0 0 5px 0;
 }
 
 iframe {
     margin: 0 20px 20px 0;
     border: 1px solid #666;
+}
+
+
+/*Dashboard*/
+
+
+/*
+ * Global add-ons
+ */
+
+.sub-header {
+    padding-bottom: 10px;
+    border-bottom: 1px solid #eee;
+}
+
+
+/*
+ * Top navigation
+ * Hide default border to remove 1px line.
+ */
+
+.navbar-fixed-top {
+    border: 0;
+}
+
+
+/*
+ * Sidebar
+ */
+
+
+/* Hide for mobile, show later */
+
+.sidebar {
+    display: none;
+}
+
+@media (min-width: 768px) {
+    .sidebar {
+        position: fixed;
+        top: 51px;
+        bottom: 0;
+        left: 0;
+        z-index: 1000;
+        display: block;
+        padding: 20px;
+        overflow-x: hidden;
+        overflow-y: auto;
+        /* Scrollable contents if viewport is shorter than content. */
+        background-color: #f5f5f5;
+        border-right: 1px solid #eee;
+    }
+}
+
+
+/* Sidebar navigation */
+
+.nav-sidebar {
+    margin-right: -21px;
+    /* 20px padding + 1px border */
+    margin-bottom: 20px;
+    margin-left: -20px;
+}
+
+.nav-sidebar > li > a {
+    padding-right: 20px;
+    padding-left: 20px;
+}
+
+.nav-sidebar > .active > a,
+.nav-sidebar > .active > a:hover,
+.nav-sidebar > .active > a:focus {
+    color: #fff;
+    background-color: #428bca;
+}
+
+
+/*
+ * Main content
+ */
+
+.main {
+    padding: 20px;
+}
+
+@media (min-width: 768px) {
+    .main {
+        padding-right: 40px;
+        padding-left: 40px;
+    }
+}
+
+.main .page-header {
+    margin-top: 0;
+}
+
+
+/*
+ * Placeholder dashboard ideas
+ */
+
+.placeholders {
+    margin-bottom: 30px;
+    text-align: center;
+}
+
+.placeholders h4 {
+    margin-bottom: 0;
+}
+
+.placeholder {
+    margin-bottom: 20px;
+}
+
+.placeholder img {
+    display: inline-block;
+    border-radius: 50%;
+}
+
+
+/*Signin*/
+
+.form-signin {
+    max-width: 330px;
+    padding: 15px;
+    margin: 0 auto;
+}
+
+.form-signin .form-signin-heading,
+.form-signin .checkbox {
+    margin-bottom: 10px;
+}
+
+.form-signin .checkbox {
+    font-weight: normal;
+}
+
+.form-signin .form-control {
+    position: relative;
+    height: auto;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+    padding: 10px;
+    font-size: 16px;
+}
+
+.form-signin .form-control:focus {
+    z-index: 2;
+}
+
+.form-signin input[type="email"] {
+    margin-bottom: -1px;
+    border-bottom-right-radius: 0;
+    border-bottom-left-radius: 0;
+}
+
+.form-signin input[type="password"] {
+    margin-bottom: 10px;
+    border-top-left-radius: 0;
+    border-top-right-radius: 0;
 }
